Fix: changes Blurr-effec.svg

--- a/style.css
+++ b/style.css
@@ -326,7 +326,7 @@ header nav li a:hover {
 
   padding: 15rem 0;
 
-  background-image: url(/assets/Blurr\ effec.svg);
+  background-image: url(/assets/Blurr-effec.svg);
   background-size: auto;
   background-repeat: no-repeat;
   background-position: center;
